# vibration-mon

./: .env.example  .gitignore  README.md  _h.txt  _s.txt  docker-compose.yml  index.html  package-lock.json  package.json  start.bat  start.sh
python/: _push_out.txt  _push_test.py  _ws_out.txt  _ws_test.py  alarm_rules.py  database.py  device_manager.py  fault_matcher.py  feature_frequency.py  frequency_domain.py  main.py  models.py  report_generator.py  requirements.txt  signal_simulator.py  time_domain.py  trend_analysis.py
python/routers/: __init__.py  alarms.py  analysis.py  data.py  devices.py  diagnosis.py  monitor.py  reports.py  sampling.py
src/: App.svelte  api.js  global.css  store.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: DeviceMonitorCard.svelte  FrequencyChart.svelte  HealthTrendSidebar.svelte  Sidebar.svelte  StatusIndicator.svelte  TimeDomainChart.svelte  Toast.svelte  TrendChart.svelte
src/pages/: AlarmCenter.svelte  AlarmConfig.svelte  Dashboard.svelte  DataReplay.svelte  DeviceAnalysis.svelte  DeviceCompare.svelte  DeviceManager.svelte  DiagnosisDetail.svelte  DiagnosisWorkbench.svelte  FeatureCalculator.svelte  KnowledgeBase.svelte  RealtimeMonitor.svelte  ReportGenerator.svelte  SignalSimulator.svelte  TrendMonitor.svelte
src/utils/: fft.js
